added dummy data

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<div class = "container">
 	
 	<!--
 	===========================================================
@@ -18,7 +19,7 @@
 	===========================================================
 	-->
 		
-	<div class = "collection" id = "collection-id-from-shopify-here">
+	<div class = "collection" id = "346171782">
 		<!-- content will be filled via javascript -->
 	</div>
 	
@@ -29,7 +30,7 @@
 	===========================================================
 	-->
 	
-	
+</div>	
 	
 	
 
