--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-	<script src="http://sdks.shopifycdn.com/js-buy-sdk/latest/shopify-buy.polyfilled.globals.min.js"></script>
+	<script src="https://sdks.shopifycdn.com/js-buy-sdk/latest/shopify-buy.polyfilled.globals.min.js"></script>
 	<script src="https://use.fontawesome.com/ba4ae401ed.js"></script>
 	<script src = "buysdk.js"></script>
 	<link rel = "stylesheet" href = "css/style.css">
