--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://use.fontawesome.com/ba4ae401ed.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src="https://sdks.shopifycdn.com/js-buy-sdk/latest/shopify-buy.polyfilled.globals.min.js"></script>
-	<script src="https://use.fontawesome.com/ba4ae401ed.js"></script>
 	<script src = "buysdk.js"></script>
 	<link rel = "stylesheet" href = "css/style.css">
 </head>
