--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class = "container">
-	
+	<h2>Collection</h2>
 	<!--
 	===========================================================
 	COLLECTION HTML BELOW: PUT THIS HTML ON ANY PAGE 
@@ -20,9 +20,9 @@
 	===========================================================
 	-->
 		
-	<div class = "collection" id = "346171782">
-		<!-- content will be filled via javascript -->
-	</div>
+		<div class = "collection" id = "346171782">
+			<!-- content will be filled via javascript -->
+		</div>
 	
 	<!--
 	===========================================================
