added function to fetch and display collection title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class = "container">
-	<h2>Collection</h2>
+	<h2 class = "collection-title"></h2>
 	<!--
 	===========================================================
 	COLLECTION HTML BELOW: PUT THIS HTML ON ANY PAGE 
@@ -66,6 +66,10 @@
 			</div>
 
 			<div class="cart-bottom">
+				<div class = "cart-attribute-container">
+					<input type = "checkbox" id = "cartAttribute" value = "include-video" name = "attributes['include-instructional-video']">Do you want to include instructional videos?
+				</div>
+				
 				<div class="cart-info clearfix cart-section">
 					<div class="type--caps cart-info__total cart-info__small">
 						Total
