added comments for cart attribute functionality

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 
 			<div class="cart-bottom">
 				<div class = "cart-attribute-container">
-					<input type = "checkbox" id = "cartAttribute" value = "include-video" name = "attributes['include-instructional-video']">Do you want to include instructional videos?
+					<!-- have a cart attribute?  Add it here -->
+					
+					<!--><input type = "checkbox" id = "cartAttribute" value = "attribute-value" name = "attributes['attribute name']"> Attribute Question?-->
 				</div>
 				
 				<div class="cart-info clearfix cart-section">
