--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<div class = "cart-attribute-container">
 					<!-- have a cart attribute?  Add it here -->
 					
-					<!--><input type = "checkbox" id = "cartAttribute" value = "attribute-value" name = "attributes['attribute name']"> Attribute Question?-->
+					<!--<input type = "checkbox" id = "cartAttribute" value = "attribute-value" name = "attributes['attribute name']"> Attribute Question?-->
 				</div>
 				
 				<div class="cart-info clearfix cart-section">
