--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 
 			<div class="cart-bottom">
 				<div class = "cart-attribute-container">
-					<!-- have a cart attribute?  Add it here -->
-					
-					<!--<input type = "checkbox" id = "cartAttribute" value = "attribute-value" name = "attributes['attribute name']"> Attribute Question?-->
+					<!-- have a cart attribute?  Add it here 
+						<input type = "checkbox" id = "cartAttribute" value = "attribute-value" 
+							name = "attributes['attribute name']"> Attribute Question?
+					-->
 				</div>
 				
 				<div class="cart-info clearfix cart-section">
